--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "aws-amplify": "^6.10.2",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "docx": "^9.1.1",
+    "dompurify": "^3.2.3",
     "embla-carousel": "^8.5.1",
     "embla-carousel-auto-height": "^8.5.1",
     "embla-carousel-auto-scroll": "^8.5.1",
@@ -74,6 +76,7 @@
     "embla-carousel-fade": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "es-toolkit": "^1.29.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.0.2",
     "framer-motion": "^11.13.1",
     "i18next": "^24.0.5",
